fix: disable view transitions are there are still issues For instance a weird bug happens where the transition between pages simply get stuck, but it doesn't happen on MacOS at all running Chrome, it happens on Windows running the same browser. If I disable transitions it never happens. So, for now, lets disable it as I can't figure how how to fix it. Maybe View Transitions need to mature or more people using them with LiveView, but there aren't enough data points for me to take any conclusion and the performance tab is also incunclusive on this regard.

--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -131,29 +131,29 @@
 /* View Transitions */
 
 /* Basic view transition styles */
-::view-transition-group(root) {
+/* ::view-transition-group(root) {
   animation-duration: 250ms;
-}
+} */
 
 /* Disable animations when theme is transitioning */
-:root[data-theme-transitioning]::view-transition-group(root) {
+/* :root[data-theme-transitioning]::view-transition-group(root) {
   animation: none;
-}
+} */
 
 /* Exclude Finder from page view transitions */
-:active-view-transition-type(page) #finder-dialog {
+/* :active-view-transition-type(page) #finder-dialog {
   view-transition-name: finder-dialog;
-}
+} */
 
-::view-transition-group(finder-dialog),
+/* ::view-transition-group(finder-dialog),
 ::view-transition-old(finder-dialog),
 ::view-transition-new(finder-dialog) {
   animation: none;
-}
+} */
 
-@media screen and (prefers-reduced-motion: no-preference) {
+/* @media screen and (prefers-reduced-motion: no-preference) {
   @view-transition {
     navigation: auto;
     types: page;
   }
-}
+} */
